--- a/src/content/lang/en.json
+++ b/src/content/lang/en.json
@@ -2,7 +2,8 @@
   "summary.title": "Summary",
   "experience.title": "Experience",
   "experience.present": "Present",
-  "experience.months": "{count, plural, =0 {0 months} =1 {# month} other {# months}}",
+  "experience.months": "{months, plural, =0 {0 months} =1 {# month} other {# months}}",
+  "experience.years": "{years, plural, =0 {0 years} =1 {# year} other {# years}}",
   "education.title": "Education",
   "courses.title": "Courses",
   "skills.title": "Skills"
