--- a/src/content/lang/nl.json
+++ b/src/content/lang/nl.json
@@ -2,7 +2,8 @@
   "summary.title": "Samenvatting",
   "experience.title": "Ervaring",
   "experience.present": "Heden",
-  "experience.months": "{count, plural, =0 {0 maanden} =1 {# maand} other {# maanden}}",
+  "experience.months": "{months, plural, =0 {0 maanden} =1 {# maand} other {# maanden}}",
+  "experience.years": "{years, plural, =0 {0 jaar} =1 {# jaar} other {# jaren}}",
   "education.title": "Opleiding",
   "courses.title": "Cursussen",
   "skills.title": "Vaardigheden"
